대화 기억 로직 변경

--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -80,6 +80,9 @@
 
     async function sendMsg() {
         if (myMsg.value.replaceAll(" ", "") != "") {
+            if (!saveLog.checked) {
+                logList = [];
+            }
             logList.push({
                 messageType: "user",
                 content: myMsg.value,
